--- a/only_articles.ipynb
+++ b/only_articles.ipynb
@@ -10,7 +10,7 @@
     "from py2neo import Graph,Node,Relationship\n",
     "dbURL = \"bolt://localhost:7687\"\n",
     "articlesGraph = Graph(dbURL,name=\"articles\",auth=(\"neo4j\", \"password\"))\n",
-    "statement = \"\" #mention articles numbers separated by space"
+    "statement = \"\" #mention articles numbers separated by comma"
    ]
   },
   {
