--- a/only_sections.ipynb
+++ b/only_sections.ipynb
@@ -10,7 +10,7 @@
     "from py2neo import Graph,Node,Relationship\n",
     "dbURL = \"bolt://localhost:7687\"\n",
     "sectionsGraph = Graph(dbURL,name=\"sections\",auth=(\"neo4j\", \"password\"))\n",
-    "statement = \"\" #mention sections numbers separated by space"
+    "statement = \"\" #mention sections numbers separated by comma"
    ]
   },
   {
